--- a/css/normalize.css
+++ b/css/normalize.css
@@ -63,7 +63,7 @@ hr {
  */
 
 pre {
-  font-family: Montserrat;
+  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
